--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,9 @@
     <string name="title_activity_base">Base</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <string name="button_description">Avatar Customization</string>
+
+    <string name="Scroll_description">Avatar Customization</string>
+    <string name="ButtonName">Shorts Olive</string>
 </resources>
